# stretch

./: Cargo.toml  README.md
hun_grammar/: Cargo.toml  README.md
hun_grammar/src/: #lib.rs#  combine_identical.rs  convert_graphemes.rs  grammar.rs  hungarian_grapheme.rs  lib.rs  obstruent_voice.rs  orthographic_combinations.rs  parser_state.rs  simple_grapheme.rs  simplify_geminates.rs
src/: aut.rs  grammar.rs  int_label.rs  labelset.rs  lattice.rs  machine.rs  main.rs  proba.rs  representation.rs  score.rs  score2.rs  setoid.rs  similarity.rs  subsets.rs
tabular/: Cargo.toml
tabular/src/: grammar.rs  grapheme.rs  label.rs  lib.rs  table.rs  table_grammar.rs  tabular.rs
