[package]
name = "stretch"
version = "0.1.0"
authors = ["K치lm치n, L치szl칩 <kalman.laszlo@nytud.mta.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hun_grammar = { path = "hun_grammar" }
tabular = { path = "tabular" }
